Add http method get-db-order
